<resources>
    <string name="air">air</string>
    <string name="em_dash">—</string>
    <string name="mode_image">Mode Image</string>
    <string name="entry_thumbnail">Entry thumbnail</string>
    <string name="mode_1">mode_1</string>
    <string name="mode_2">mode_2</string>
    <string name="mode_3">mode_3</string>
    <string name="mode_4">mode_4</string>
    <string name="loading_homescreen_data">Loading HomeHealth Data…</string>
    <string name="no_data_available">No data available</string>

    <string name="low">low</string>
    <string name="med">med</string>
    <string name="high">high</string>
</resources>
