<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">


        <is.yranac.canary.ui.views.Pulsator
            android:id="@+id/pulsator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:pulse_color="@color/light_gray"
            app:pulse_count="1"
            app:pulse_duration="1000"
            app:pulse_repeat="0"
            app:pulse_startFromScratch="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="35sp" />


            <ImageView
                android:id="@+id/mode_image"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/mode_image"
                android:visibility="gone" />


            <include
                android:id="@+id/device_info_layout"
                layout="@layout/layout_device_statatics" />
        </LinearLayout>


        <ImageView
            android:id="@+id/mode_home"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/mode_1"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/mode_away"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/mode_2"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/mode_night"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/mode_3"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/mode_privacy"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/mode_4"
            android:visibility="gone" />

        <TextView
            android:id="@+id/offlineText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/loading_data"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:text="@string/loading_homescreen_data"
            android:textAlignment="center"
            android:textSize="15sp"
            android:visibility="gone" />

    </RelativeLayout>
</layout>
